# sui_mev_bot

./: .gitignore  README.md  ReadMe.md  pyproject.toml  requirements.txt
src/: config.py  main.py
src/analysis/: price_impact.py  transaction_filter.py
src/common/: event_bus.py  model.py
src/db/: db.py
src/execution/: transaction_executor.py
src/monitor/: monitor.py  shio_feed.py  shio_feed_monitor.py  transaction_monitor.py
src/path/: path_finder.py
src/strategy/: arbitrage.py  gradient_search_strategy.py  strategies.py  three_pool_arbitrage.py  two_pool_arbitrage.py  two_pool_arbitrage_strategy.py
src/token_price/: token_price.py
tests/: test_path_finder.py  test_swap.py
