[project]
name = "mev-project"
version = "0.1.0"
description = ""
authors = [
    {name = "wqh"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sui-python-sdk (>=0.1.5,<0.2.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "python-socks[asyncio] (>=2.7.1,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "websockets (>=12.0,<13.0)"
]

[tool.poetry]
name = "sui_mev_bot"  
version = "0.1.0"     
description = "MEV bot for Sui blockchain" 
authors = ["Your Name <your.email@example.com>"] 
license = "MIT"  
readme = "README.md" 

[tool.poetry.dependencies]
python = ">=3.12,<4.0"  # 添加版本上限

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
